--- a/accounts/templates/registration/edit_account.html
+++ b/accounts/templates/registration/edit_account.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
- {% load crispy_forms_tags %}
+
+{% load crispy_forms_tags %}
+
 {% block content %}
-<div class="content d-flex flex-column flex-column-fluid" id="kt_content">
-						<!--begin::Subheader-->
-						<!--begin::Entry-->
-						<div class="d-flex flex-column-fluid">
+  
+<div class="d-flex flex-column-fluid">
 							<!--begin::Container-->
 							<div class="container">
 								<div class="row">
@@ -15,23 +15,23 @@
 											
 											<!--begin::Form-->
 											<form class="form" method="POST">
-                        {% csrf_token %}
+												{% csrf_token %}
 												<div class="card-body">
-													<h3 class="font-size-lg text-dark text-center font-weight-bold mb-6">Change Account Password</h3>
+													<h3 class="font-size-lg text-dark text-center font-weight-bold mb-6">Update Account Details</h3>
 													<hr>
-                                                <div class="mb-15">
-														<div class="form-group row">
-															<div class="col-lg-2"></div>
-															<div class="col-lg-8">
-																{{ form | crispy}}
-														</div>                                                                                         
-                                        		</div>
+                                                    <div class="form-group row">
+														<div class="col-lg-2"></div>
+                                                        <div class="col-lg-8">
+															{{ form | crispy}}
+															
+														</div>
+                                        		    </div>
 												</div>
 												<div class="card-footer">
 													<div class="row">
 														<div class="col-lg-3"></div>
 														<div class="col-lg-6">
-															<button type="submit" class="btn btn-primary mr-2">Change Password</button>
+															<button type="submit" class="btn btn-success mr-2">Update Account Details</button>
 															<button type="reset" class="btn btn-secondary">Cancel</button>
 														</div>
 													</div>
@@ -48,7 +48,5 @@
 							</div>
 							<!--end::Container-->
 						</div>
-						<!--end::Entry-->
-					</div>  
 
 {% endblock content %}
