--- a/templates/base.html
+++ b/templates/base.html
@@ -696,11 +696,11 @@
 												</span>
 											</li>
 											<li class="menu-item menu-item-submenu" aria-haspopup="true" data-menu-toggle="hover">
-												<a href="" class="menu-link menu-toggle">
+												<a href="{% url 'edit_account' %}" class="menu-link menu-toggle">
 													<i class="menu-bullet menu-bullet-line">
 														<span></span>
 													</i>
-													<span class="menu-text">Change Password</span>
+													<span class="menu-text">Update Account Details</span>
 													<i class="menu-arrow"></i>
 												</a>
 											</li>
